# amfoss-tasks

./: README.md
Introspection/: README.md
task-00/: README.md
task-01/: README.md
task-02/: README.md
task-03/: Problem-01.py  Problem-03.c  Problem-05.c  Problem-06.py  Problem-08.c  README.md  problem-02.py  problem-04.py  problem-07.py  problem-09.py  problem-10.py
task-04/: MathQuiz.java  README.md
task-05/: Cargo.toml  README.md  casesdata.csv
task-05/src/: main  main.rs
task-06/: README.md  reddit.go
task-07/: README.md  README2.md  pubspec.yaml
task-07/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
task-07/lib/: main.dart
task-07/lib/Screens/: ScreenOne.dart  ScreenTwo.dart
task-08/: README.md  perceval.py
task-09/: README.md
task-09/Spammer_Spaghetti/: Spammer.js
task-10/: README.md
task-10/pset1/cash/: cash  cash.c
task-10/pset1/hello/: hello  hello.c
task-10/pset1/mario/: mario  mario.c
task-10/pset2/caesar/: caesar  caesar.c
task-10/pset2/readability/: readability  readability.c
task-10/pset3/plurality/: plurality  plurality.c
task-11/: README.md
task-13/: README.md
task-14/: README.md  pass
task-15/: README.md  problem-01.py  problem-02.py  problem-03.py  problem-03Alternative.py  problem-03Alternative2.py  problem-04.py  problem-05.py
