[package]
name = "rust_scrapper"
version = "0.1.0"
authors = ["pranav"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
csv= "1.1"
select="0.5.0"
tokio = { version = "0.2", features = ["full"]}